--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://vineet140502.github.io/PathfinderVisualiser",
+  "homepage": "https://hsureka.github.io/pathfinding-visualizer",
   "name": "visualizer",
   "version": "0.1.0",
   "private": true,
